added note about conclusion at the end

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -71,7 +71,9 @@
     "This dataset provides demographic data - gender and race - on the American population, also classifying it by different states and regions.\n",
     "\n",
     "We utilized these four datasets to compare the racial demographics of campus police departments to the\n",
-    "university's student population and then look at the bigger picture across the nation. We did this by merging the first three datasets to ultimately gather information about each university's location, student demographics, campus police demographics, and more in-depth information about each of these factors. We then compared differences in crime between universities with more or less representative police departments with our newly merged dataset. Finally, we employed the last dataset from the American Census to compare these college campuses to the general population demographics and see how they relate to each other -- and analyzing if regions/areas are of any interest to our data."
+    "university's student population and then look at the bigger picture across the nation. We did this by merging the first three datasets to ultimately gather information about each university's location, student demographics, campus police demographics, and more in-depth information about each of these factors. We then compared differences in crime between universities with more or less representative police departments with our newly merged dataset. Finally, we employed the last dataset from the American Census to compare these college campuses to the general population demographics and see how they relate to each other -- and analyzing if regions/areas are of any interest to our data.\n",
+    "___\n",
+    "## *Discussion and Conclusion presented at the end of the notebook* "
    ]
   },
   {
@@ -138,9 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 347,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# read the dataset for campus characterisics\n",
@@ -435,9 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -520,9 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -606,9 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 362,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -819,9 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 371,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# merge college characteristics data with the rest of the data using the OPEID\n",
@@ -831,9 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# merge the college data with each college's state census data\n",
@@ -851,9 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -892,9 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -978,9 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 375,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1064,9 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1150,9 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 377,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1243,9 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 378,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1279,9 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 379,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1359,9 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1432,9 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 382,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1558,9 +1530,7 @@
   {
    "cell_type": "code",
    "execution_count": 386,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1648,9 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1745,9 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 388,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1842,9 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 389,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1939,9 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2043,9 +2005,7 @@
   {
    "cell_type": "code",
    "execution_count": 391,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2119,9 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2160,9 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2236,9 +2192,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2266,9 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2356,9 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2663,9 +2613,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2779,9 +2727,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# iterate through rows of the dataframe\n",
@@ -2811,9 +2757,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2854,7 +2798,6 @@
    "cell_type": "code",
    "execution_count": 404,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -2930,9 +2873,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2959,9 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3047,9 +2986,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3135,9 +3072,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3223,9 +3158,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3311,9 +3244,7 @@
   {
    "cell_type": "code",
    "execution_count": 410,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3399,9 +3330,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3487,9 +3416,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3575,9 +3502,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3663,9 +3588,7 @@
   {
    "cell_type": "code",
    "execution_count": 414,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3778,14 +3701,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
